--- a/src/app/components/site/homepage/homepage.component.html
+++ b/src/app/components/site/homepage/homepage.component.html
@@ -1,5 +1,20 @@
-<div class="surface-card p-4 shadow-2 border-round">
-  <div class="text-3xl font-medium text-900 mb-3">Card Title</div>
-  <div class="font-medium text-500 mb-3">Vivamus id nisl interdum, blandit augue sit amet, eleifend mi.</div>
-  <div style="height: 150px" class="border-2 border-dashed surface-border"></div>
+<div class="flex flex-wrap justify-content-center">
+  <div class="grid grid-nogutter surface-section text-800">
+    <div class="col-12 md:col-6 p-6 text-center md:text-left flex align-items-center ">
+        <section>
+            <span class="block text-6xl font-bold mb-1">{{ schoolName }}</span>
+            <div class="text-3xl text-primary font-bold mb-3" >
+              <p class="m-1" *ngFor="let item of atendimento" >{{item}}</p>
+
+            </div>
+            <p class="mt-0 mb-4 text-700 line-height-3">{{frase}}</p>
+  </section>
+    </div>
+    <div class="col-12 md:col-6 overflow-hidden">
+        <img [src]="fachada" alt="Image" class="md:ml-auto block h-30rem " style="clip-path: polygon(8% 0, 100% 0%, 100% 100%, 0 100%)">
+    </div>
+  </div>
 </div>
+
+
+
