--- a/src/app/components/site/login/login.component.html
+++ b/src/app/components/site/login/login.component.html
@@ -1,1 +1,32 @@
-<p>login works!</p>
+
+<div class="justify-content-center flex" >
+
+<div class="surface-card my-4 p-4 shadow-2 border-round justify-content-center w-full lg:w-4">
+  <div class="text-center mb-5">
+      <img [src]="logo" alt="school-logo" height="80" class="mb-3">
+      <div class="text-900 text-3xl font-medium mb-3">{{schoolName}}</div>
+      <span class="text-600 font-medium line-height-3">Insira suas credenciais para acessar o sistema</span>
+  </div>
+
+  <div>
+
+    <form (ngSubmit)="onSubmit(loginForm)" #loginForm="ngForm">
+      <div>
+        <label for="email" class="block text-900 font-medium mb-2">Usuário</label>
+        <input id="email" type="email" placeholder="Nome do usuário" pInputText required [(ngModel)]="model.email" name="email" class="w-full mb-3">
+      </div>
+
+      <div>
+      <label for="password" class="block text-900 font-medium mb-2">Senha</label>
+        <input  type="password" id="password" required [(ngModel)]="model.password" name="password" required  placeholder="Senha" pInputText class="w-full mb-3">
+      </div>
+
+      <button type="submit" pButton pRipple [disabled]="!loginForm.form.valid" label="Login" icon="pi pi-user" class="w-full mb-3"></button>
+
+    </form>
+
+
+  </div>
+</div>
+
+</div>
