--- a/src/app/components/site/homepage/homepage.component.html
+++ b/src/app/components/site/homepage/homepage.component.html
@@ -1,9 +1,9 @@
-<div class="flex flex-wrap justify-content-center">
+<div class="flex align-items-center justify-content-center">
   <div class="grid grid-nogutter surface-section text-800">
-    <div class="col-12 md:col-6 p-6 text-center md:text-left flex align-items-center ">
+    <div class="col-12 md:col-6 p-6 text-center md:text-center align-items-center justify-content-center ">
         <section>
-            <span class="block text-6xl font-bold mb-1">{{ schoolName }}</span>
-            <div class="text-3xl text-primary font-bold mb-3" >
+            <span class="block flex justify-content-center flex-wrap text-4xl font-bold mb-1">{{ schoolName }}</span>
+            <div class="text-2xl text-primary font-bold mb-3" >
               <p class="m-1" *ngFor="let item of atendimento" >{{item}}</p>
 
             </div>
