--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,14 +1,13 @@
 @import "./assets/themes/aura-light-teal/theme.css";
 @import "../node_modules/primeng/resources/primeng.css";
+@import "primeicons/primeicons.css";
+
 /* Order */
 @layer reset, primeng;
 
 /* Reset CSS */
 @layer reset {
-    button,
-    input {
-        /* CSS to Reset */
-    }
+
 }
 
 
